--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ defaults:
 
 env:
   TEST_PROXY_URL: "http://localhost:8888"
-  NIGHTLY_DDEV_PR_URL: "https://nightly.link/drud/ddev/actions/runs/7371608782/ddev-linux-amd64.zip"
+  NIGHTLY_DDEV_PR_URL: "https://nightly.link/drud/ddev/actions/runs/2682419555/ddev-linux-amd64.zip"
 
 jobs:
   tests:
@@ -50,7 +50,7 @@ jobs:
       run: |
         brew install bats-core mkcert
         mkcert -install
-        sudo apt-get update >/dev/null && sudo apt-get install -y tinyproxy >/dev/null
+        sudo apt-get update >/dev/null && sudo apt-get install -y curl tinyproxy >/dev/null
         # Tinyproxy will listen by default on all interfaces, port 8888
         sudo service tinyproxy start
 
@@ -69,7 +69,7 @@ jobs:
     - name: Use ddev PR
       if: matrix.ddev_version == 'PR'
       run: |
-        curl -sSL -o ddev_linux.zip ${NIGHTLY_DDEV_PR_URL}
+        curl -sL --fail -o ddev_linux.zip ${NIGHTLY_DDEV_PR_URL}
         unzip ddev_linux.zip
         mv ddev /usr/local/bin/ddev && chmod +x /usr/local/bin/ddev
 
