--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,10 +44,7 @@ jobs:
         mkcert -install
         sudo apt-get update >/dev/null && sudo apt-get install -y curl tinyproxy >/dev/null
         # Tinyproxy will listen by default on all interfaces, port 8888
-        echo 'Allow 172.0.0.0/8
-  Allow 192.168.0.0/16
-  Allow 10.0.0.0/8' >> /etc/tinyproxy/tinyproxy.conf
-  `
+        printf "Allow 172.0.0.0/8\nAllow 192.168.0.0/16\nAllow 10.0.0.0/8\n" | sudo tee -a /etc/tinyproxy/tinyproxy.conf  
         sudo systemctl start tinyproxy
 
     - name: Use ddev stable
