--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,7 +45,7 @@ jobs:
         sudo apt-get update >/dev/null && sudo apt-get install -y curl tinyproxy >/dev/null
         # Tinyproxy will listen by default on all interfaces, port 8888
         printf "Allow 172.0.0.0/8\nAllow 192.168.0.0/16\nAllow 10.0.0.0/8\n" | sudo tee -a /etc/tinyproxy/tinyproxy.conf  
-        sudo systemctl start tinyproxy
+        sudo systemctl restart tinyproxy
 
     - name: Use ddev stable
       if: matrix.ddev_version == 'stable'
