--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
 
     strategy:
       matrix:
-        ddev_version: [HEAD, PR]
+        ddev_version: [stable, HEAD]
 #        ddev_version: [stable, edge, HEAD, PR]
       fail-fast: false
 
