--- a/install.yaml
+++ b/install.yaml
@@ -11,7 +11,7 @@ pre_install_actions:
 
 project_files:
 - docker-compose.proxy-support.yaml
-- web-build/pre.Dockerfile.example.proxy-support
+- web-build/pre.Dockerfile.proxy-support
 
 global_files:
 
