Get the proper TEST_PROXY_URL and other environment setup in there

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
   schedule:
-  - cron: '25 08 * * *'
+  - cron: '05 07 * * *'
 
   workflow_dispatch:
     inputs:
@@ -33,6 +33,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Proxy Environment setup
+        run: |
+          mkcert -install
+          sudo apt-get update >/dev/null && sudo apt-get install -y curl tinyproxy >/dev/null
+          # Tinyproxy will listen by default on all interfaces, port 8888
+          printf "Allow 172.0.0.0/8\nAllow 192.168.0.0/16\nAllow 10.0.0.0/8\n" | sudo tee -a /etc/tinyproxy/tinyproxy.conf  
+          sudo systemctl restart tinyproxy
+          echo "TEST_PROXY_URL=http://$(hostname --ip-address)" >> $GITHUB_ENV
+
       - uses: ddev/github-action-add-on-test@v2
         with:
           ddev_version: ${{ matrix.ddev_version }}
