--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,7 +47,7 @@ jobs:
           # Tinyproxy will listen by default on all interfaces, port 8888
           printf "Allow 172.0.0.0/8\nAllow 192.168.0.0/16\nAllow 10.0.0.0/8\n" | sudo tee -a /etc/tinyproxy/tinyproxy.conf  
           sudo systemctl restart tinyproxy
-          echo "TEST_PROXY_URL=http://$(hostname --ip-address)" >> $GITHUB_ENV
+          echo "TEST_PROXY_URL=http://$(hostname --ip-address):8888" >> $GITHUB_ENV
 
       - uses: ddev/github-action-add-on-test@v2
         with:
