--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
   schedule:
-  - cron: '05 07 * * *'
+  - cron: '25 08 * * *'
 
   workflow_dispatch:
     inputs:
@@ -30,19 +30,11 @@ jobs:
         ddev_version: [stable, HEAD]
       fail-fast: false
 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up Homebrew
-        id: set-up-homebrew
-        uses: Homebrew/actions/setup-homebrew@master
-
       - name: Proxy Environment setup
         run: |
-          brew install bats-core mkcert
-          mkcert -install
           sudo apt-get update >/dev/null && sudo apt-get install -y curl tinyproxy >/dev/null
           # Tinyproxy will listen by default on all interfaces, port 8888
           printf "Allow 172.0.0.0/8\nAllow 192.168.0.0/16\nAllow 10.0.0.0/8\n" | sudo tee -a /etc/tinyproxy/tinyproxy.conf  
